# proc_dig_img

./: README.md  main.py  paths.py  pyproject.toml
fase1_aumento_de_datos/: corrección_escalamiento.ipynb  data_augmentation.py  img_rgb_a_escala_de_grises.ipynb  plots_utils.py  read_img.py
fase2_fil/: descripcion_conjunto.ipynb  filtros,py  filtros.py  filtros_adaptativos.ipynb  imagenes_tipo.csv  limagenes_escala_grises.ipynb  read_img.py
fase2_fil/utils/: busca_origen.py  crear_bd.py
