[project]
name = "proc-dig-img"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.1",
    "pillow>=12.1.0",
    "pyprojroot>=0.3.0",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "seaborn[stats]>=0.13.2",
]
